<resources>
    <string name="app_name">Audio Engine Sample</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="MR_IMAGE_COVER_BASE">http://images.findawayworld.com/v1/image/cover/</string>
    <string name="MR_IMAGE_CONTENT_LIST_PARAMS">\?width=140&amp;quality=80</string>
    <string name="MR_IMAGE_PARAM">\?width=800&amp;quality=60</string>
    <string name="chapter_number">Chapter number</string>
    <string name="part_number">Part Number</string>
    <string name="duration">duration</string>
    <string name="download_status">Download Status</string>
    <string name="not_downloaded">NOT_DOWNLOADED</string>
    <string name="downloaded">DOWNLOADED</string>
    <string name="downloading">DOWNLOADING</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="genre">Genre :</string>
    <string name="narrator">Narrator :</string>
    <string name="publisher">Publisher :</string>
    <string name="size">Download Size :</string>
    <string name="runtime">Runtime :</string>
    <string name="book_title">Book Title</string>
    <string name="chapter">Chapter</string>
    <string name="play_button">Play Button</string>

</resources>
